<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logoTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yamazaki"
            android:textAlignment="center"
            android:textColor="@color/mazak"
            android:textSize="65sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yamazaki"
            android:paddingLeft="15sp"
            android:paddingTop="10sp"
            android:paddingRight="15sp"
            android:paddingBottom="10sp"
            android:src="@drawable/logo_mazak" />

        <TextView
            android:id="@+id/logoSubTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/department"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:drawable/bottom_bar" />

    </LinearLayout>

    <TextView
        android:id="@+id/helloMain"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0"
        android:text="Autor: Adam Kowalski ©2021"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/helloMain2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0"
        android:text="@string/infoHeader"
        android:textAlignment="center"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textLicense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:isScrollContainer="false"
                    android:nestedScrollingEnabled="false"
                    android:scrollIndicators="right"
                    android:scrollX="100sp"
                    android:scrollY="100sp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="horizontal"
                    android:text="@string/libraryList" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>