<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCheck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yamazaki"
            android:paddingHorizontal="15sp"
            android:paddingVertical="10sp"
            android:layout_marginTop="210sp"
            android:src="@drawable/logo_mazak"
            app:layout_constraintTop_toTopOf="@id/layoutCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginVertical="1dp"
            android:background="@android:drawable/bottom_bar"
            app:layout_constraintTop_toBottomOf="@id/logoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/search" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1sp"
        android:layout_marginBottom="1sp"
        android:hint="@string/searching"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/list" />

    <ImageView
        android:id="@+id/exitSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:srcCompat="@drawable/ic_dialog_close_light" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:paddingTop="1sp"
        android:paddingBottom="220sp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="0"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layoutCheck"
        tools:visibility="invisible" />


    <ProgressBar
        android:id="@+id/progressCheck"
        style="?android:attr/progressBarStyle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list" />

    <Button
        android:id="@+id/hideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/layoutCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layoutCheck" />

    <TextView
        android:id="@+id/waitList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/toast_my"
        android:paddingHorizontal="25sp"
        android:paddingVertical="10sp"
        android:text="@string/wait"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/progressCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layoutCheck"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>